--- a/wwwroot/css/FormBuiderStyles.css
+++ b/wwwroot/css/FormBuiderStyles.css
@@ -637,7 +637,7 @@ eb-disable {
         border: none !important;
         padding: 0 !important;
         border-right: dotted 1px rgb(241, 241, 241) !important;
-        height: 35px;
+        height: 34px;
         vertical-align: middle;
     }
 
@@ -1101,7 +1101,7 @@ tr[agg='true'] [coltype='DGNumericColumn'] span {
 
 [tdcoltype="DGStringColumn"] > .ctrl-cover {
     position: unset;
-    height: calc(100% - 2px);
+    /*height: calc(100% - 2px);*/
 }
 
 .Eb-ctrlContainer[ctype="InputGeoLocation"] > .ctrl-cover {
@@ -1109,9 +1109,8 @@ tr[agg='true'] [coltype='DGNumericColumn'] span {
 }
 
 .dgtbl .ctrl-cover {
-    /*border: none;
-    border-right: 1px solid rgba(34,36,38,.15);
-    border-bottom: none;*/
+    border-top: none;
+    border-bottom: none;
 }
 
 .Dg_body .slno-tbl {
